fixed speaker name alignment issue

--- a/schedule/assets/css/index.css
+++ b/schedule/assets/css/index.css
@@ -578,7 +578,7 @@ font-size: 10px;
 		width: 511px;
 		height: 35px;
 		position: relative;
-		left: -4%;
+		left: -57px;
 		font-weight: 900;
 		font-size: 23px;
 		text-align: left;
@@ -877,7 +877,7 @@ font-size: 10px;
 		width: 511px;
 		height: 35px;
 		position: relative;
-		left: -40px;
+		left: -57px;
 		font-family: Work Sans;
 		font-weight: 900;
 		font-size: 36px;
